--- a/src/main/webapp/parametros/unidadDeTiempo/edit.xhtml
+++ b/src/main/webapp/parametros/unidadDeTiempo/edit.xhtml
@@ -18,8 +18,8 @@
                                  requiredMessage="#{bundle.CreateUnidadDeTiempoRequiredMessage_nombre}" required="true"/>
                     
                     <p:outputLabel value="#{bundle.CreateUnidadDeTiempoLabel_secuencia}" for="secuencia"/>
-                    <p:inputText id="nombre" value="#{mbUnidadDeTiempo.selected.secuencia}" 
-                                 requiredMessage="#{bundle.CreateUnidadDeTiempoRequiredMessage_secuencia}" required="true"/>                    
+                    <p:inputText id="secuencia" value="#{mbUnidadDeTiempo.selected.secuencia}" 
+                                 requiredMessage="#{bundle.CreateUnidadDeTiempoRequiredMessage_secuencia}" required="true"/>
                 </h:panelGrid>
             </p:panel>
 
