--- a/src/main/webapp/administracion/instancia/edit.xhtml
+++ b/src/main/webapp/administracion/instancia/edit.xhtml
@@ -10,15 +10,20 @@
             <h:form>
                 <p:panel id="pnEdit" header="#{bundle.InstanciaEditTitle}" style="margin-bottom:10px;">
                     <p:growl id="messages" />
-                    <h:panelGrid columns="2">
-                        
+                    <h:panelGrid columns="3">
+                        <h:inputHidden id="id" value="#{mbInstancia.selected.id}" />                        
                         <p:outputLabel value="#{bundle.CreateInstanciaLabel_nombre}" for="nombre"/>                       
-                        <p:inputText id="nombre" value="#{mbInstancia.selected.nombre}" requiredMessage="#{bundle.CreateInstanciaRequiredMessage_nombre}" required="true"/>                           
+                        <p:inputText id="nombre" validator="#{mbInstancia.validarUpdate}"
+                                     value="#{mbInstancia.selected.nombre}" requiredMessage="#{bundle.CreateInstanciaRequiredMessage_nombre}" required="true"/>                           
                         
-   
+                        <p:outputLabel value=""/>
                         <p:outputLabel value="#{bundle.CreateInstanciaLabel_ruta}" for="ruta"/>
                         <p:inputText id="ruta" value="#{mbInstancia.selected.ruta}" requiredMessage="#{bundle.CreateInstanciaRequiredMessage_ruta}" required="true"/>
                         <p:message for="ruta" />  
+
+                        <p:outputLabel value="#{bundle.CreateInstanciaLabel_app}" for="app"/>
+                        <p:inputText id="app" value="#{mbInstancia.selected.app}" requiredMessage="#{bundle.CreateInstanciaRequiredMessage_app}" required="true"/>
+                        <p:message for="app" />  
 
                         <p:outputLabel value="#{bundle.CreateInstanciaLabel_codigo}" for="codigo"/>
                         <p:inputText id="codigo" value="#{mbInstancia.selected.codigo}" requiredMessage="#{bundle.CreateInstanciaRequiredMessage_codigo}" required="true"/>
