--- a/src/main/webapp/administracion/procedimiento/list.xhtml
+++ b/src/main/webapp/administracion/procedimiento/list.xhtml
@@ -21,11 +21,8 @@
                     </h:panelGroup>
                 </p:panel>      
                 
-                <p:dataTable value="#{mbProcedimiento.listProcedimiento}" var="e" id="procedimientoList" rows="5" 
-                             filteredValue="#{mbProcedimiento.listProcedimiento}"
-                             paginator="true" 
-                             widgetVar="proTable"
-                             paginatorTemplate="{CurrentPageReport}  {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
+                <p:dataTable value="#{mbProcedimiento.listProcedimiento}" var="e" id="procedimientoList" rows="5" filteredValue="#{mbProcedimiento.listProcedimiento}"
+                             paginator="true" widgetVar="proTable" paginatorTemplate="{CurrentPageReport}  {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
                              rowsPerPageTemplate="5,10,15">
                     <f:facet name="header">
                         Listado de #{bundle.ProcedimientoListTitle}
