insertamos instancias desde procedimiento. Falta la edición y agregado de nuevas instancias

--- a/src/main/webapp/administracion/procedimiento/edit.xhtml
+++ b/src/main/webapp/administracion/procedimiento/edit.xhtml
@@ -46,7 +46,7 @@
                                 </p:column>
 
                                 <p:column headerText="Quitar" style="width :70px;" >
-                                    <p:commandButton icon="ui-icon-circle-triangle-n" actionListener="#{mbProcedimiento.destroyInstancia()}" update="instVinc" />
+                                    <p:commandButton icon="ui-icon-circle-triangle-n" actionListener="#{mbProcedimiento.destroyInstancia}" update="instVinc" />
                                 </p:column>                        
                             </p:dataTable>
                         </p:dialog>  
