--- a/src/main/webapp/administracion/procedimiento/edit.xhtml
+++ b/src/main/webapp/administracion/procedimiento/edit.xhtml
@@ -223,7 +223,7 @@
                         </p:commandButton>    
                     </f:facet>   
                     <f:facet name="right">
-                        <p:commandButton icon="ui-icon-arrowreturnthick-1-w" action="#{mbInstancia.prepareList()}" value="Volver" immediate="true"/>        
+                        <p:commandButton icon="ui-icon-arrowreturnthick-1-w" action="#{mbProcedimiento.prepareList()}" value="Volver" immediate="true"/>        
                     </f:facet>
                 </p:toolbar>
             </h:form>
