--- a/src/main/webapp/administracion/procedimiento/dlgEditInstancias.xhtml
+++ b/src/main/webapp/administracion/procedimiento/dlgEditInstancias.xhtml
@@ -27,16 +27,16 @@
 
                     <p:outputLabel value="#{bundle.CreateInstanciaLabel_estadoInicial}" for="estadoInicial"/>                             
                     <p:selectOneMenu id="estadoInicial" value="#{mbProcedimiento.instancia.estadoInicial}" 
-                                     requiredMessage="#{bundle.CreateInstanciaProcedimientoRequiredMessage_estadoInicial}" required="true">                                         >
+                                     requiredMessage="#{bundle.CreateInstanciaProcedimientoRequiredMessage_estadoInicial}" required="false">                                         >
                         <f:selectItem itemLabel="Seleccione el Estado Inicial" itemValue="" noSelectionOption="true" />                           
-                        <f:selectItems value="#{mbProcedimiento.listaEstadosIniciales}" var="estado" itemLabel="#{estado.nombre}" itemValue="#{estadoInicial}"/>
+                        <f:selectItems value="#{mbProcedimiento.listaEstados}" var="estado" itemLabel="#{estado.nombre}" itemValue="#{estadoInicial}"/>
                     </p:selectOneMenu>  
 
                     <p:outputLabel value="#{bundle.CreateInstanciaLabel_estadoFinal}" for="estadoFinal"/>      
                     <p:selectOneMenu id="estadoFinal" value="#{mbProcedimiento.instancia.estadoFinal}" 
-                                     requiredMessage="#{bundle.CreateInstanciaProcedimientoRequiredMessage_estadoFinal}" required="true">
+                                     requiredMessage="#{bundle.CreateInstanciaProcedimientoRequiredMessage_estadoFinal}" required="false">
                         <f:selectItem itemLabel="Seleccione el Estado Final" itemValue="" noSelectionOption="true"/>
-                        <f:selectItems value="#{mbProcedimiento.listaEstadosFinales}" var="estado" itemLabel="#{estado.nombre}" itemValue="#{estadoFinal}"/>
+                        <f:selectItems value="#{mbProcedimiento.listaEstados}" var="estado" itemLabel="#{estado.nombre}" itemValue="#{estadoFinal}"/>
                     </p:selectOneMenu> 
 
                     <p:outputLabel value="#{bundle.CreateInstanciaLabel_alerta}" for="alerta"/>
@@ -47,7 +47,7 @@
                     <p:selectOneMenu id="unidadDeTiempoAlerta" value="#{mbProcedimiento.instancia.unidadDeTiempoAlerta}" 
                                      requiredMessage="#{bundle.CreateInstanciaRequiredMessage_UdTAlerta}" required="true">
                         <f:selectItem itemLabel="Seleccione la Unidad de Tiempo para el alerta" itemValue="" noSelectionOption="true" />                           
-                        <f:selectItems value="#{mbProcedimiento.listaUnidadDeTiemposAlerta}" var="unidadDeTiempo" itemLabel="#{unidadDeTiempo.nombre}" itemValue="#{unidadDeTiempoAlerta}"/>
+                        <f:selectItems value="#{mbProcedimiento.listaUnidadDeTiempos}" var="unidadDeTiempo" itemLabel="#{unidadDeTiempo.nombre}" itemValue="#{unidadDeTiempoAlerta}"/>
                     </p:selectOneMenu>                          
 
                     <p:outputLabel value="#{bundle.CreateInstanciaLabel_vto}" for="cantidadVencimiento"/>
@@ -58,7 +58,7 @@
                     <p:selectOneMenu id="unidadDeTiempoVto" value="#{mbProcedimiento.instancia.unidadDeTiempoVto}" 
                                      requiredMessage="#{bundle.CreateInstanciaRequiredMessage_UdTVto}" required="true">
                         <f:selectItem itemLabel="Seleccione la Unidad de Tiempo para el vencimiento" itemValue="" noSelectionOption="true" />                           
-                        <f:selectItems value="#{mbProcedimiento.listaUnidadDeTiemposVto}" var="unidadDeTiempo" itemLabel="#{unidadDeTiempo.nombre}" itemValue="#{unidadDeTiempoVto}"/>
+                        <f:selectItems value="#{mbProcedimiento.listaUnidadDeTiempos}" var="unidadDeTiempo" itemLabel="#{unidadDeTiempo.nombre}" itemValue="#{unidadDeTiempoVto}"/>
                     </p:selectOneMenu>                          
 
                     <p:outputLabel value="#{bundle.CreateInstanciaLabel_observaciones}" for="observaciones"/>
@@ -118,7 +118,7 @@
                         <f:facet name="output"><h:outputText value="#{ins.estadoInicial.nombre}" /></f:facet>
                         <f:facet name="input">
                             <h:selectOneMenu value="#{ins.estadoInicial.nombre}" style="width:100%">
-                                <f:selectItems value="#{mbProcedimiento.listaEstadosIniciales}" var="ini" itemLabel="#{ini.nombre}" itemValue="#{ini.nombre}" />
+                                <f:selectItems value="#{mbProcedimiento.listaEstados}" var="ini" itemLabel="#{ini.nombre}" itemValue="#{ini.nombre}" />
                             </h:selectOneMenu>
                         </f:facet>
                     </p:cellEditor>
@@ -129,7 +129,7 @@
                         <f:facet name="output"><h:outputText value="#{ins.estadoFinal.nombre}" /></f:facet>
                         <f:facet name="input">
                             <h:selectOneMenu value="#{ins.estadoFinal.nombre}" style="width:100%">
-                                <f:selectItems value="#{mbProcedimiento.listaEstadosFinales}" var="fin" itemLabel="#{fin.nombre}" itemValue="#{fin.nombre}" />
+                                <f:selectItems value="#{mbProcedimiento.listaEstados}" var="fin" itemLabel="#{fin.nombre}" itemValue="#{fin.nombre}" />
                             </h:selectOneMenu>
                         </f:facet>
                     </p:cellEditor>
@@ -147,7 +147,7 @@
                         <f:facet name="output"><h:outputText value="#{ins.unidadDeTiempoAlerta.nombre}" /></f:facet>
                         <f:facet name="input">
                             <h:selectOneMenu value="#{ins.unidadDeTiempoAlerta.nombre}" style="width:100%">
-                                <f:selectItems value="#{mbProcedimiento.listaUnidadDeTiemposAlerta}" var="ale" itemLabel="#{ale.nombre}" itemValue="#{ale.nombre}" />
+                                <f:selectItems value="#{mbProcedimiento.listaUnidadDeTiempos}" var="ale" itemLabel="#{ale.nombre}" itemValue="#{ale.nombre}" />
                             </h:selectOneMenu>
                         </f:facet>
                     </p:cellEditor>
@@ -165,7 +165,7 @@
                         <f:facet name="output"><h:outputText value="#{ins.unidadDeTiempoVto.nombre}" /></f:facet>
                         <f:facet name="input">
                             <h:selectOneMenu value="#{ins.unidadDeTiempoVto.nombre}" style="width:100%">
-                                <f:selectItems value="#{mbProcedimiento.listaUnidadDeTiemposVto}" var="vto" itemLabel="#{vto.nombre}" itemValue="#{vto.nombre}" />
+                                <f:selectItems value="#{mbProcedimiento.listaUnidadDeTiempos}" var="vto" itemLabel="#{vto.nombre}" itemValue="#{vto.nombre}" />
                             </h:selectOneMenu>
                         </f:facet>
                     </p:cellEditor>
