--- a/src/main/webapp/administracion/procedimiento/view.xhtml
+++ b/src/main/webapp/administracion/procedimiento/view.xhtml
@@ -20,7 +20,7 @@
                         <h:outputText   value="#{mbProcedimiento.selected.nombre}" title="#{bundle.CreateProcedimientoTitle_nombre}"/>
                         
                         <h:outputLabel  value="#{bundle.CreateProcedimientoLabel_app}"/>
-                        <h:outputText   value="#{mbProcedimiento.selected.app}" title="#{bundle.CreateProcedimientoTitle_app}"/>
+                        <h:outputText   value="#{mbProcedimiento.selected.appNombre}" title="#{bundle.CreateProcedimientoTitle_app}"/>
                         
                         <h:outputLabel  value="#{bundle.UsuarioAlta}"/>
                         <h:outputText   value="#{mbProcedimiento.selected.adminentidad.usAlta.nombre}" title="#{bundle.UsuarioAlta}"/>                        
