--- a/src/main/webapp/seguridad/usuario/view.xhtml
+++ b/src/main/webapp/seguridad/usuario/view.xhtml
@@ -16,14 +16,14 @@
                     <h:outputText value="#{mbUsuario.selected.nombre}" title="#{bundle.UsuarioLabelNombre}"/>     
 
                     <h:outputLabel value="#{bundle.UsuarioLabelRol}"/>
-                    <h:outputText value="#{mbUsuario.selected.rol.nombre}" title="#{bundle.CreateRolTitle_nombre}"/>
+                    <h:outputText value="#{mbUsuario.selected.rol.nombre}" title="#{bundle.UsuarioTitleRol}"/>
 
 
                     <h:outputLabel value="#{bundle.UsuarioLabelFechaAlta}"/>
-                    <h:outputText value="#{mbUsuario.selected.admin.strFechaAlta}" title="#{bundle.UsuarioLabelFechaAlta}"/>   
+                    <h:outputText value="#{mbUsuario.selected.adminentidad.strFechaAlta}" title="#{bundle.UsuarioLabelFechaAlta}"/>   
 
                     <h:outputLabel value="#{bundle.UsuarioLabelUsAlta}"/>
-                    <h:outputText value="#{mbUsuario.selected.admin.usAlta.nombre}" title="#{bundle.UsuarioLabelUsAlta}"/> 
+                    <h:outputText value="#{mbUsuario.selected.adminentidad.usAlta.nombre}" title="#{bundle.UsuarioLabelUsAlta}"/> 
                 </h:panelGrid>                    
             </p:panel>
             
